Fix grid gap

--- a/garden/static/css/style.css
+++ b/garden/static/css/style.css
@@ -43,7 +43,7 @@
 }
 
 .main-container {
-    margin: 0 10px;
+    margin: 0 10px 10px 10px;
 }
 .main-container .message {
     max-width: 300px;
@@ -185,11 +185,20 @@ input:checked ~ label span:nth-child(3) {
 /* Cards */
 .home-cards {
     width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+    max-width: 740px;
+    margin: 0 auto;
+}
+@media (min-width: 740px) {
+    .home-cards {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 .card {
     display: block;
     padding-bottom: 10px;
-    margin-bottom: 20px;
 }
 .card .media-container {
     position: relative;
